start chat logic

--- a/static_src/styles/layout.css
+++ b/static_src/styles/layout.css
@@ -13,4 +13,13 @@
   width: 70%;
 }
 
+.massage-main {
+  display: flex;
+  align-items: flex-end;
+}
+
+.message-list {
+  width: 30%;
+}
+
 /*# sourceMappingURL=layout.css.map */
