--- a/static_src/styles/layout.scss
+++ b/static_src/styles/layout.scss
@@ -12,3 +12,11 @@
 .layout-ride-side {
   width: 70%;
 }
+
+.massage-main {
+  display: flex;
+  align-items: flex-end;
+}
+.message-list {
+  width: 30%;
+}
