--- a/static_src/styles/message.css
+++ b/static_src/styles/message.css
@@ -25,4 +25,12 @@
   align-self: flex-end;
 }
 
+.message-box {
+  width: 70%;
+}
+
+.massage-input {
+  min-width: calc(100% - 60px);
+}
+
 /*# sourceMappingURL=message.css.map */
